fix overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,26 +23,31 @@
 }
 
 html{
-	overflow: auto;
+	@media screen and (min-width: 1280px){
+		overflow-x: hidden;
+	}
 }
 
 body{
 	width: 1280px;
 	font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
 	margin:0 auto;
+	
 }
 
 header{
 	height: 100%;
 	color: white;
+	clear: both;
 	.bgl{
 		height: 100%;
 		background-color: #000;
-		margin: 0 -100%;
-		padding: 0 100%;
+		@media screen and (min-width: 1280px){
+			margin: 0 -100%;
+			padding: 0 100%;
+		}
 		z-index: 1;
 	}
-	overflow: hidden;
 	position: relative;
 	nav{
 		z-index: 5;
